# trading-view-big-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/: __init__.py
apps/ingest_batch/: __init__.py  __main__.py
docs/contracts/: ohlcv_v1.md
docs/decisions/: .gitkeep  adr-001-initial-architecture.md
infra/: docker-compose.yml
infra/configs/: .gitkeep
notebooks/: HU5.ipynb  Test_PySpark.ipynb
pipelines/: __init__.py
pipelines/batch/: __init__.py  ohlcv_backfill.py
pipelines/spark/: __init__.py
pipelines/streaming/: __init__.py
tests/: __init__.py  test_batch_ingestion.py
